--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
 
     <!-- <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %> -->
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-secondary-subtle">
+    <h1 class="text-center">Instagram Latest Images Viewer</h1>
     <%= yield %>
   </body>
 </html>
