エラー処理と微調整

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,3 +25,14 @@
   object-fit: cover;
   margin: 10px;
  }
+
+ .flash_message {
+  color: red;
+  font-weight: bold;
+  text-align: center;
+ }
+
+ .notice {
+  text-align: center;
+  margin-top: 10pt;
+ }
